config.json: updated footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -35,12 +35,5 @@
             }
         ]
     },
-    "domain": "https://home-real-c52e0.netlify.app",
-    "footer": {
-        "sections": [],
-        "has_nav": true,
-        "nav_links": [],
-        "content": "lorem-ipsum",
-        "links": []
-    }
+    "domain": "https://home-real-c52e0.netlify.app"
 }
