config.json: updated domain

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -35,5 +35,5 @@
             }
         ]
     },
-    "domain": "https://home-real-c52e0.netlify.app"
+    "domain": "https://karlo-hosting.de/"
 }
